--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block-end: 0;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+
 @layer base {
   h1 {
     @apply font-bold text-3xl;
   }
 
   a {
-    @apply underline font-bold;
+    @apply font-bold;
   }
+}
+body {
+  margin: 0;
+  padding: 0;
 }
