--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,6 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
-
 @layer base {
   h1 {
     @apply font-bold text-3xl;
@@ -39,6 +38,7 @@ html:focus-within {
 body {
   margin: 0;
   padding: 0;
+  animation: transitionIn 0.80s;
 }
 
 .rotate-hover {
@@ -46,6 +46,32 @@ body {
 }
 
 .rotate-hover:hover {
-  color:white;
+  color: white;
   transform: rotate(180deg);
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: translateY(-60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+
+@keyframes transitionInwards{
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  } to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.textAnimation {
+  animation: transitionInwards 1s;
 }
